--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
             padding: 15px;
             text-align: center;
         }
-        nav {
-            margin: 10px 0;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
+        header img {
+            max-width: 50%;
+            height: auto; /* Сохраняет пропорции изображения */
         }
         main {
             display: flex;
@@ -46,85 +42,7 @@
 </head>
 <body>
     <header>
-        <h1>Добро пожаловать на мой сайт</h1>
-        <nav>
-            <a href="#">Главная</a>
-            <a href="#">О нас</a>
-            <a href="#">Контакты</a>
-        </nav>
-    </header>
-    <main>
-        <article>
-            <h2>Главная статья</h2>
-            <p>Здесь будет основной контент сайта.</p>
-        </article>
-        <aside>
-            <h3>Дополнительная информация</h3>
-            <p>Сюда можно добавить ссылки или виджеты.</p>
-        </aside>
-    </main>
-    <footer>
-        <p>© 2024 Мой сайт</p>
-    </footer>
-</body>
-</html>
-Дальнейшие шаги:
-Настроить стили: Можно использовать CSS для улучшения внешнего вида.
-Добавить контент: Заполни страницы текстом, изображениями и видео.
-Адаптивность: Убедись, что сайт хорошо отображается на мобильных устройствах.
-Если у тебя есть конкретные элементы, которые ты хочешь добавить, дай знать, и я помогу их реализовать!
-
-
-
-Вы сказали:
-нужно убрать Главное О нас и Контакты
-ChatGPT сказал:
-ChatGPT
-Конечно! Вот обновлённый код без меню навигации "Главная", "О нас" и "Контакты":
-
-html
-Копировать код
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-        }
-        main {
-            display: flex;
-        }
-        article {
-            flex: 3;
-            padding: 20px;
-        }
-        aside {
-            flex: 1;
-            background: #f4f4f4;
-            padding: 20px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #333;
-            color: #fff;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Добро пожаловать на мой сайт</h1>
+        <img src="https://i.pinimg.com/originals/db/c2/b2/dbc2b2b33497b8bb343888ff99fb8385.jpg" alt="Добро пожаловать на мой сайт">
     </header>
     <main>
         <article>
