--- a/index.html
+++ b/index.html
@@ -13,12 +13,8 @@
         header {
             background: #333;
             color: #fff;
-            padding: 15px;
+            padding: 50px;
             text-align: center;
-        }
-        header img {
-            max-width: 100%;
-            height: auto; /* Сохраняет пропорции изображения */
         }
         main {
             display: flex;
@@ -42,11 +38,11 @@
 </head>
 <body>
     <header>
-        <img src="https://i.pinimg.com/originals/db/c2/b2/dbc2b2b33497b8bb343888ff99fb8385.jpg" alt="Добро пожаловать на мой сайт">
+        <h1>Добро пожаловать на мой сайт</h1>
     </header>
     <main>
         <article>
-            <h2>Главная статья</h2>
+            <h2>#Главная статья#</h2>
             <p>Здесь будет основной контент сайта.</p>
         </aside>
     </main>
