--- a/index.html
+++ b/index.html
@@ -3,73 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
-    <style>
-        @font-face {
-            font-family: 'SF Pro Display';
-            src: url('fonts/SF-Pro-Display-Regular.woff2') format('woff2'),
-                 url('fonts/SF-Pro-Display-Regular.woff') format('woff');
-            font-weight: normal;
-            font-style: normal;
-        }
-        @font-face {
-            font-family: 'SF Pro Display';
-            src: url('fonts/SF-Pro-Display-Bold.woff2') format('woff2'),
-                 url('fonts/SF-Pro-Display-Bold.woff') format('woff');
-            font-weight: bold;
-            font-style: normal;
-        }
-        body {
-            font-family: 'SF Pro Display', sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-        }
-        header img {
-            max-width: 100%;
-            height: auto; /* Сохраняет пропорции изображения */
-        }
-        main {
-            display: flex;
-        }
-        article {
-            flex: 3;
-            padding: 20px;
-        }
-        aside {
-            flex: 1;
-            background: #f4f4f4;
-            padding: 20px;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #333;
-            color: #fff;
-        }
-    </style>
+    <title>Мой простой сайт</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <img src="URL_ТВОЕЙ_КАРТИНКИ" alt="Добро пожаловать на мой сайт">
+        <h1>Добро пожаловать на мой сайт!</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Главная</a></li>
+                <li><a href="#about">О нас</a></li>
+                <li><a href="#contact">Контакты</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <article>
-            <h2>Главная статья</h2>
-            <p>Здесь будет основной контент сайта.</p>
-        </article>
-        <aside>
-            <h3>Дополнительная информация</h3>
-            <p>Сюда можно добавить ссылки или виджеты.</p>
-        </aside>
+        <section id="home">
+            <h2>Главная</h2>
+            <p>Это моя первая страница!</p>
+        </section>
+        <section id="about">
+            <h2>О нас</h2>
+            <p>Здесь будет информация о нас.</p>
+        </section>
+        <section id="contact">
+            <h2>Контакты</h2>
+            <p>Вы можете связаться с нами по электронной почте.</p>
+        </section>
     </main>
     <footer>
-        <p>© 2024 Мой сайт</p>
+        <p>&copy; 2024 Мой сайт</p>
     </footer>
 </body>
 </html>
