--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header {
             background: #35424a;
             color: #ffffff;
-            padding: 250px 0;
+            padding: 20px 0;
             text-align: center;
         }
 
@@ -39,14 +39,6 @@
             padding: 20px;
         }
 
-        section {
-            background: #ffffff;
-            padding: 15px;
-            margin: 10px 0;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
         footer {
             text-align: center;
             padding: 10px 0;
@@ -60,25 +52,14 @@
         <h1>Добро пожаловать на мой сайт!</h1>
         <nav>
             <ul>
-                <li><a href="#home">Главная</a></li>
-                <li><a href="#about">О нас</a></li>
-                <li><a href="#contact">Контакты</a></li>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h2>Главная</h2>
-            <p>Это моя первая страница!</p>
-        </section>
-        <section id="about">
-            <h2>О нас</h2>
-            <p>Здесь будет информация о нас.</p>
-        </section>
-        <section id="contact">
-            <h2>Контакты</h2>
-            <p>Вы можете связаться с нами по электронной почте.</p>
-        </section>
+        <p>Это моя первая страница!</p>
     </main>
     <footer>
         <p>&copy; 2024 Мой сайт</p>
