--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
         }
 
         header {
             background: #35424a;
             color: #ffffff;
-            padding: 20px 0;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%; /* Высота хедера 100% */
         }
 
         nav ul {
@@ -36,6 +41,10 @@
         }
 
         main {
+            flex: 1; /* Позволяет основному контенту занимать оставшееся пространство */
+            display: flex;
+            align-items: center;
+            justify-content: center;
             padding: 20px;
         }
 
@@ -50,13 +59,6 @@
 <body>
     <header>
         <h1>Добро пожаловать на мой сайт!</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <p>Это моя первая страница!</p>
