--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя Картинка</title>
+    <title>quadiem</title>
 </head>
 <body>
-    <img src="https://github.com/pavelkraiu/quadiem/blob/main/inprg.png" alt="Описание изображения" />
+    <img src="https://github.com/pavelkraiu/quadiem/inprg.png" alt="" />
 </body>
 </html>
