--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>quadiem - Minecraft server</title>
+    <title>quadiem</title>
+    <style>
+        img {
+            max-width: 50%;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <img src="inprg.png" alt="" />
+    <img src="inprg.png" alt="Описание изображения" />
 </body>
 </html>
