--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
     <img src="inprg.png" alt="Описание изображения" />
 </body>
 </html>
-<iframe src="http://play.quadiem.com:25605/#world:51:10:23:430:0:0:0:0:perspective" width="100%" height="600px" frameborder="0"></iframe>
+<iframe src="http://play.quadiem.com:25605" width="100%" height="600px" frameborder="0"></iframe>
