--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
     <img src="inprg.png" alt="Описание изображения" />
 </body>
 </html>
-<iframe src="http://http://play.quadiem.com:25605/" width="100%" height="600" frameborder="0"></iframe>
+<iframe src="http://play.quadiem.com:25605/#world:1901:26:91:337:0:0:0:1:flat" width="100%" height="600" frameborder="0"></iframe>
