--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
     <img src="inprg.png" alt="Описание изображения" />
 </body>
 </html>
-<iframe src="http://play.quadiem.com:25605/#world:55:0:109:8651:0:0:0:1:flat" width="100%" height="600px" frameborder="0"></iframe>
+<iframe src="http://135.181.170.88:25660/" width="100%" height="600px" frameborder="0"></iframe>
