--- a/index.html
+++ b/index.html
@@ -15,4 +15,6 @@
     <img src="inprg.png" alt="Описание изображения" />
 </body>
 </html>
-<iframe src="http://135.181.170.88:25660/" width="100%" height="600px" frameborder="0"></iframe>
+
+<iframe src="http://135.181.170.88:8123/" width="100%" height="600"></iframe>
+
