--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <img src="inprg.png" alt="Описание изображения" />
 </body>
 </html>
-
+</body>
 <iframe src="http://135.181.170.88:8123/" width="100%" height="600"></iframe>
-
+</body>
+</html>
