--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </body>
 </html>
 </body>
-<iframe src="http://135.181.170.88:8123/" width="100%" height="600"></iframe>
+<iframe src="http://135.181.170.88:25602/#world:0:0:0:1500:0:0:0:0:perspective" width="100%" height="600"></iframe>
 </body>
 </html>
